changed the icons in the black nav bar to svg

--- a/prototype.html
+++ b/prototype.html
@@ -41,7 +41,7 @@
 <body>
 	<nav class="top"> <!-- Here: hamburger button & LOGO -->
 			<div class="header">
-				<!--hamburger svg-->
+<!--hamburger svg-->
 				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 						<!-- Created with Inkscape (http://www.inkscape.org/) -->
 						<svg id="fill-svg" class="main-nav-svg" height="30" width="30"  viewbox="0 0 60 60" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">	
@@ -49,12 +49,26 @@
 						 <path d="M47.568,16.159h-44.826c-0.60105,0-1.0877,0.76152-1.0877,1.6918,0,0.92618,0.48669,1.6836,1.0877,1.6836h44.826c0.60104,0,1.0904-0.76152,1.0904-1.6836-0.0027-0.93441-0.48935-1.6918-1.0904-1.6918z" />
 						 <path d="m47.124,30.667-43.935,0c-0.60105,0-1.0877,0.76152-1.0877,1.6877s0.48669,1.6877,1.0877,1.6877h43.938c0.6037,0,1.0877-0.76152,1.0877-1.6877s-0.48669-1.6877-1.0904-1.6877z" />
 						</svg>
-				<span id="service">
-					<h1 id="logo">NEWSPAPER</h1>
-				<i class="fa fa-user fa-lg" aria-hidden="true" alt="user"></i>
-				<i class="fa fa-home fa-lg" aria-hidden="true" alt="home"></i>
+			
+					<h1 id="logo">NEWSPAPER</h1> 
+					<span id="service">
+<!--SVG code for USER button-->
+				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+						<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+						<svg class="main-nav-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"  xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 360 360" height="30" width="30" version="1.1" y="0px" x="0px" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+						<circle cx="129.38" cy="60" r="60" style="fill:white"/>
+						<path d="m129.38,150c-60.061,0-108.75,48.689-108.75,108.75h217.5c-0.01-60.06-48.69-108.75-108.75-108.75z" style="stroke-width:10" />
+						</svg>
+<!--SVG code for HOME Button-->
+				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+					<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+					<svg class="main-nav-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 43" height="30" width="30" >
+						<path d="M27.812,30.235h-22.627c-0.276,0-0.5-0.224-0.5-0.5v-18.596c0-0.276,0.224-0.5,0.5-0.5s0.5,0.224,0.5,0.5v18.096h21.627v-18.096c0-0.276,0.224-0.5,0.5-0.5s0.5,0.224,0.5,0.5v18.596c0,0.276-0.223,0.5-0.5,0.5z"/>
+						<path d="m32.499,16.11c-0.123,0-0.247-0.045-0.344-0.136l-15.657-14.786-15.655,14.785c-0.201,0.19-0.52,0.18-0.707-0.02-0.189-0.201-0.181-0.517,0.02-0.707l15.998-15.109c0.193-0.183,0.494-0.182,0.688,0l16.001,15.109c0.2,0.19,0.209,0.506,0.02,0.707-0.099,0.104-0.231,0.157-0.364,0.157z" />
+						<path d="m20.499,29.75-7.9981,0c-0.27659,0-0.50107-0.21501-0.50107-0.47993v-10.401c0-0.26492,0.22448-0.47993,0.50107-0.47993h7.9981c0.27659,0,0.50107,0.21501,0.50107,0.47993v10.401c0,0.26492-0.22448,0.47993-0.50107,0.47993z" style="fill:white"/>
+					</svg>
 			</span>
-			</div><!-- end .header -->
+	</div><!-- end .header -->
 
 		<div class="navigation">
 			 <ul class="pagetabs">
