--- a/prototype.html
+++ b/prototype.html
@@ -133,8 +133,21 @@
 	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 	
 	<span class= "options">
-		  <i class="fa fa-volume-up fa-lg" aria-hidden="true"></i>
-		  <i class="fa fa-bookmark fa-lg" aria-hidden="true"></i>
+<!--SVG for the audio button ' listen to the article'-->
+		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+					<!-- Created with Inkscape (http://www.inkscape.org/) -->
+					<svg class="article-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+					  <path  d="m10.737,0.55078c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z" />
+					 <path  d="m12.768,3.43c1.4505,3.0655,1.8715,6.131,0,9.1964" />
+					 <path  d="m3.1698,4.9925,0,5.8482" />
+					</svg>
+
+<!-- SVG for the save for later button-->
+		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+					<!-- Created with Inkscape (http://www.inkscape.org/) -->
+					<svg class="article-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" viewbox="0 0 40 40">
+					<path d="m14.689,0.4849-13.768,0c-0.227,0-0.41,0.184-0.41,0.41v22.023c0,0.166,0.1,0.314,0.252,0.377,0.156,0.069,0.33,0.029,0.449-0.088l1.371-1.372c0.004-0.001,0.004-0.003,0.006-0.005l5.215-5.213,6.594,6.59c0.078,0.078,0.182,0.12,0.291,0.12,0.051,0,0.104-0.01,0.156-0.032,0.152-0.062,0.252-0.211,0.252-0.377v-22.023c0-0.226-0.183-0.41-0.408-0.41z" />
+</svg>
 		</span>
 
 	<div id="mainArticlePage">
