change good explore and polls

--- a/prototype.html
+++ b/prototype.html
@@ -184,7 +184,8 @@
 
 
 
-	<img class="poll" src="images/html-poll.png" alt="Poll">
+	<img class="poll" src="images/poll.png" alt="Poll">
+	<img class="pollresultsArticle" src="images/pollresultsArticle.png" alt="PollResultsArticle">
 
 	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
 
@@ -271,12 +272,15 @@
 				<img src="images/login.png" alt="logIn">
 			</div>
 
-				    <img src="images/explore-personal-search bar.png" alt="Search">
+				    <img src="images/addpersonalexplore.png" alt="Add">
 
 				<div id="sortable">
-				   <img src="images/explore-personal-summary of the year.png" alt="Summary">
-				   <img src="images/explore-personal-authors.png" alt="Authors">
-				   <img src="images/explore-personal-topics.png" alt="Topics">
+					<div class="YIN">
+				   		<img class="yinOn" src="images/yinOn.png" alt="Summary">
+				   		<img class="yin" src="images/yin.png" alt="yin">
+				   	</div>
+				   <img src="images/authors.png" alt="Authors">
+				   <img src="images/personaltopics.png" alt="PersonalTopics">
 
 				</div>		
 
