--- a/prototype.html
+++ b/prototype.html
@@ -154,12 +154,11 @@
 
 		<div id="paginated-content">
 			<div class="articleTextPage">
-<p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
-<p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
-<p>“We’re learning that the time people choose to spend reading or watching content they clicked on from News Feed is an important signal that the story was interesting to them,” said software engineer Moshe Blank and research scientist Jie Xu in a post on the company’s website.</p>
-
-<p class="pagenr">1/6</p>
-</div>
+			<p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
+			<p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
+			<p>“We’re learning that the time people choose to spend reading or watching content they clicked on from News Feed is an important signal that the story was interesting to them,” said software engineer Moshe Blank and research scientist Jie Xu in a post on the company’s website.</p>
+			<p class="pagenr">1/6</p>
+		</div>	
 
 
 		</div><!-- end #paginated-content -->
@@ -170,8 +169,8 @@
 		 <div id="img-gallery">
 			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
 			<img class="article-img" src="images/article-01.jpg" />
-			<!--<img class="article-img" src="images/article-02.jpg" />
-			<img class="article-img" src="images/article-03.jpg" />-->
+			<img class="article-img" src="images/article-02.jpg" />
+			<img class="article-img" src="images/article-03.jpg" />-
 			<p class="imgnr">1/3</p>
 
 		 </div> <!-- end article img-gallery -->
