headlines html css

--- a/prototype.html
+++ b/prototype.html
@@ -128,7 +128,15 @@
 <!-- Here: CONTENT-->
 <div class="content">
 
+
 	<div class="tabContent" id="article">
+
+		<div id="heading">
+
+			<h id="headingArticle">ARTICLE SECTION</h>
+   		
+   		</div>
+
 	<h2 id="title">Facebook is going to start showing you pieces people actually read</h2>
 	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 	
@@ -153,6 +161,7 @@
 	<div id="mainArticlePage">
 
 		<div id="paginated-content">
+
 			<div class="articleTextPage">
 <p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
 <p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
@@ -250,12 +259,16 @@
 
 	<!-- explore -->
 	<div class="tabContent"  id="explore">
+
 		<!-- tab -->
 		<ul class="intTab">
 			<li class="selected"><a href="#tab1">Public</a></li>
 			<li><a href="#tab2">Personal</a></li>
 		</ul>
 		<!-- end tab -->
+
+		<h id="headingExplore">EXPLORE SECTION</h>
+
 		<!-- explore content -->
 		<div class="tabIntContent" id="tab1">
 			<img src="images/searchpublicexplore.png" alt="SearchPublicExplore" />
@@ -290,6 +303,9 @@
 
 	<!-- discussion -->
 	<div  class="tabContent" id="discussion">
+
+		<h id="headingDiscussion">DISCUSSION SECTION</h>
+
 		<img src="images/html-comments-01.png" alt="Discussion">
 
 	</div><!-- end #discussion -->
