--- a/prototype.html
+++ b/prototype.html
@@ -101,13 +101,14 @@
 	<!-- this is the code for the svg of the article section-->
 				 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 
-				<svg class="tab-icon"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 60 60"  version="1.1"><defs id="defs5468"/>											
-					<path class="svg-element" d="m35.632,44.36-14.577,0c-1.6741,0-2.2407,0.79841-2.421,1.262-0.20604,0.46359-0.33482,1.4423,0.82417,2.6013l6.0782,6.0782c0.7469,0.7469,1.7514,1.159,2.8073,1.159,1.056,0,2.0604-0.41208,2.8073-1.159l6.0782-6.0782c1.1847-1.1847,1.0302-2.1377,0.82417-2.6013-0.18029-0.46359-0.77266-1.262-2.4467-1.262z" />
-					 <path class="svg-element" d="m54.279,25.585-6.0782-6.0782c-0.64388-0.64388-1.2878-0.95294-1.9316-0.95294-0.90143,0-1.9316,0.66964-1.9316,2.5755v14.577c0,1.9059,1.0302,2.5755,1.9316,2.5755,0.64388,0,1.2878-0.33482,1.9316-0.95294l6.0782-6.0782c0.7469-0.7469,1.159-1.7514,1.159-2.8073,0-1.056-0.41208-2.0604-1.159-2.8073z" />
-					 <path class="svg-element" d="m21.055,12.424,14.577,0c1.6741,0,2.2407-0.77266,2.4467-1.262,0.20604-0.46359,0.36057-1.4423-0.82417-2.627l-6.078-6.0786c-1.4938-1.4938-4.1208-1.4938-5.6404,0l-6.0782,6.0782c-1.1847,1.1847-1.0302,2.1377-0.82417,2.6013,1.1332,0.95294,1.3135,1.2363,2.421,1.2878z" />
-					 <path class="svg-element" d="m10.444,18.528c-0.64388,0-1.2878,0.33482-1.9316,0.95294l-6.0782,6.0782c-0.7469,0.7469-1.159,1.7514-1.159,2.8073,0,1.0817,0.41208,2.0604,1.159,2.8073l6.0782,6.0782c0.64388,0.64388,1.2878,0.9787,1.9316,0.9787,0.64388,0,1.2105-0.33482,1.5453-0.90143,0.25755-0.43784,0.38633-1.0045,0.38633-1.6741v-14.577c-0.128-1.443-0.875-2.293-1.931-2.55z" />
-					 <rect  rx="0" ry="1.6998" height="22.304" width="22.304" y="17.385" x="17.211" style="stroke-linejoin:round;stroke-miterlimit:4;"/>
-						</svg>					
+				<svg class="tab-icon"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 26 26"  >						
+					  <path style="stroke-width:1" d="m16.839,6.149,0,0l-5.531-5.529c-0.081-0.081-0.185-0.12-0.29-0.12h-10.107c-0.227,0-0.411,0.184-0.411,0.409v22.119c0,0.227,0.184,0.411,0.411,0.411h15.639c0.227,0,0.41-0.184,0.41-0.411v-16.589c0-0.112-0.046-0.214-0.121-0.29z" />
+						 <path  style="stroke-width:1" d="m10.959,0.54083,0,5.8715,5.9346-0.00001" />
+						 <path style="stroke-width:1" d="m3.8245,10.958c10.228,0.0631,10.228,0,10.228,0" />
+						 <path style="stroke-width:1" d="m3.7591,13.689c10.228,0.0631,10.228,0,10.228,0" />
+						 <path style="stroke-width:1" d="m3.7809,16.42c10.228,0.0631,10.228,0,10.228,0" />
+						 <path  style="stroke-width:1"d="m3.8027,19.152c10.228,0.0631,10.228,0,10.228,0"/>
+						</svg>				
 					</a>
 				</li>
 			 	<li id="discussionTour">
@@ -201,8 +202,21 @@
 
 
 
-	<img class="poll" src="images/poll.png" alt="Poll">
-	<img class="pollresultsArticle" src="images/pollresultsArticle.png" alt="PollResultsArticle">
+	<!--<img class="poll" src="images/poll.png" alt="Poll">-->
+
+<div class="poll">
+	<span>Do you hate Donald Trump?</span></br>
+	<span class="pollOptions">Yes</span>
+	<span class="pollOptions">No</span>
+	<span class="results" id="Yes" >74% Yes </span>
+	<span class="results" id="No">26% No</span>
+	<!--<input type="button" name="answer" value="Yes"></input>
+	<input type="button" name="answer" value="No"></input>-->
+	<input id="submit-button" type="submit" name="submit" value="Submit"></input>
+</div>
+
+
+	<!--<img class="pollresultsArticle" src="images/pollresultsArticle.png" alt="PollResultsArticle">-->
 
 	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
 
