--- a/prototype.html
+++ b/prototype.html
@@ -235,12 +235,22 @@
 	</ul>
 	<div class="tabUpdContent" id="what">
 		<span>Author</span> <span>Social Media</span> <span>Privacy</span> <span>Podcast</span> <span>Copyright</span> <span>Software</span>
+
+		<i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
+
 	</div>
 	<div class="tabUpdContent" id="when">
 		<span>Monday</span> <span>Tuesday</span> <span>Wednesday</span> <span>Thursday</span> <span>Friday</span> <span>Weekend</span>
+
+		<i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
+
 	</div>
 	<div class="tabUpdContent" id="where">
 		<span><i class="fa fa-facebook" aria-hidden="true"></i></span> <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span> <span><i class="fa fa-twitter" aria-hidden="true"></i></span> <span><i class="fa fa-whatsapp" aria-hidden="true"></i></span>
+
+		<button class="signUpdate">SIGN UP</button>
+		
+
 	</div>
 </div>
 
