changed some style in the poll

--- a/prototype.html
+++ b/prototype.html
@@ -204,18 +204,21 @@
 
 	<!--<img class="poll" src="images/poll.png" alt="Poll">-->
 
+<hr>
 <div class="poll">
 	<span>Do you hate Donald Trump?</span></br>
 	<span class="pollOptions">Yes</span>
 	<span class="pollOptions">No</span>
-	<span class="results" id="Yes" >74% Yes </span>
-	<span class="results" id="No">26% No</span>
+	<span class="results" id="Yes" >
+		<p id="left">67% Yes</p>
+		<p id="right"> 33% N0 </p>
+		</span>
 	<!--<input type="button" name="answer" value="Yes"></input>
 	<input type="button" name="answer" value="No"></input>-->
 	<input id="submit-button" type="submit" name="submit" value="Submit"></input>
 </div>
 
-
+<hr>
 	<!--<img class="pollresultsArticle" src="images/pollresultsArticle.png" alt="PollResultsArticle">-->
 
 	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
