--- a/prototype.html
+++ b/prototype.html
@@ -166,22 +166,16 @@
 					<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" viewbox="0 0 40 40">
 					<path d="m14.689,0.4849-13.768,0c-0.227,0-0.41,0.184-0.41,0.41v22.023c0,0.166,0.1,0.314,0.252,0.377,0.156,0.069,0.33,0.029,0.449-0.088l1.371-1.372c0.004-0.001,0.004-0.003,0.006-0.005l5.215-5.213,6.594,6.59c0.078,0.078,0.182,0.12,0.291,0.12,0.051,0,0.104-0.01,0.156-0.032,0.152-0.062,0.252-0.211,0.252-0.377v-22.023c0-0.226-0.183-0.41-0.408-0.41z" />
 					</svg>
-			</span>
-
-	
+			</span>	
 
 <div id="mainArticlePage">
-		<div id="paginated-content">
-
-			<div class="articleTextPage">
+		<div id="paginated-content">			
 			<p class="lead">The first week of this sprint, our team needed some inspiration so we decided to have a creative brainstorming session all together. Initially, we used a series of method cards of the Design Methods Toolkit from the MediaLAB Amsterdam to get some necessary insights for our redesign and usability processes. These were the cards we picked: Written scenario, Navigation map, Customer experience, Emotional journey, Wireframes, Clickable Prototype, Through other eyes, Heuristic evaluation, Think out loud.</p>
-			<!--<p>
-			In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.
-		</p>	-->		
-			<p class="pagenr">1/6</p>
-		</div>	
+			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>	
+		
 
 	</div><!-- end #paginated-content -->
+</div> <!-- End #mainArticlePage-->
 
 <!--
 	<p id="interaction"><a id="GOEXPLORE" href="#explore">You've read 5 articles from us... <br> Time to GO EXPLORE more.</a></p>
@@ -233,7 +227,7 @@
 	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
 
 <div id="newsUpdate" >
-	<span class="subheader">News Butler</span>
+	<span class="subheader">NEWS UPDATES</span>
 	<p id="newUpdateText">Get the news you want, when you want and where you want.</p>
 	<ul class="updateTabs">
 		<li class="selected"><a href="#what">What</a></li>
