changed the position of the .paginated content and iamge gallery div

--- a/prototype.html
+++ b/prototype.html
@@ -170,17 +170,19 @@
 
 <div id="mainArticlePage">
 		<div id="paginated-content">			
-			<p class="lead">The first week of this sprint, our team needed some inspiration so we decided to have a creative brainstorming session all together. Initially, we used a series of method cards of the Design Methods Toolkit from the MediaLAB Amsterdam to get some necessary insights for our redesign and usability processes. These were the cards we picked: Written scenario, Navigation map, Customer experience, Emotional journey, Wireframes, Clickable Prototype, Through other eyes, Heuristic evaluation, Think out loud.</p>
-			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>	
-		
+			<p class="lead">The first week of this sprint, our team needed some inspiration so we decided to have a creative brainstorming session all together. Initially, we used a series of method cards of the Design Methods Toolkit from the MediaLAB Amsterdam</p>
+			<p>to get some necessary insights for our redesign and usability processes. These were the cards we picked: Written scenario, Navigation map, Customer experience, Emotional journey, Wireframes, Clickable Prototype, Through other eyes, Heuristic evaluation, Think out loud.</p>
+			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
+			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
+			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
+			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
+		</div><!-- end #paginated-content -->
 
-	</div><!-- end #paginated-content -->
-</div> <!-- End #mainArticlePage-->
 
 <!--
 	<p id="interaction"><a id="GOEXPLORE" href="#explore">You've read 5 articles from us... <br> Time to GO EXPLORE more.</a></p>
 -->
-	<div>
+	
 		 <div id="img-gallery">
 			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
 			<img class="article-img" src="images/article-01.jpg" />
