changed the styling of the article cards

--- a/prototype.html
+++ b/prototype.html
@@ -142,7 +142,7 @@
    	</div>
 
 
-	<h2 id="title">Facebook is going to start showing you pieces people actually read</h2>
+	<h2 id="title">Where's the 'dislike' button?</h2>
 	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 
 	    <!--  <span id="User">		
@@ -170,12 +170,8 @@
 
 <div id="mainArticlePage">
 		<div id="paginated-content">			
-			<p class="lead">The first week of this sprint, our team needed some inspiration so we decided to have a creative brainstorming session all together. Initially, we used a series of method cards of the Design Methods Toolkit from the MediaLAB Amsterdam</p>
-			<p>to get some necessary insights for our redesign and usability processes. These were the cards we picked: Written scenario, Navigation map, Customer experience, Emotional journey, Wireframes, Clickable Prototype, Through other eyes, Heuristic evaluation, Think out loud.</p>
-			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
-			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
-			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
-			<p> In this way, we could gain a more focused understanding or vision about defining goals, knowing context, knowing the user, framing insights, ideation, prototyping and testing.	</p>
+			<p class="lead">Facebook messes with our minds; Facebook's 'emotional contagion' experiment makes users really mad</p>
+			<p>What was going on in your Facebook news feed the week of Jan. 11-18, 2012? Birthday reminders, cat videos, crockpot recipes, baby pictures and invitations to play Bejeweled Blitz, probably, plus lots of current events posts were guaranteed to make you glad or mad. That week, Mitt Romney won New Hampshire's Republican primary, Playboy announced it was leaving Chicago, and Hostess filed for bankruptcy, prompting fears that there would be no more Twinkies. The Patriots knocked the Broncos out of the NFL playoffs, putting an end to Tebowmania. Snowfall in an otherwise mild winter, Derrick Rose was out with a sprained toe, and your crazy cousin was picking fights with anyone who commented on any of it. If you were one of nearly 700,000 randomly selected Facebook users, though, your feed might have contained a little less to "like." Or dislike. For years, Facebook has ignored pleas to add a clickable thumbs-down icon. Maybe this is why.</p>
 		</div><!-- end #paginated-content -->
 
 
