--- a/prototype.html
+++ b/prototype.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
+	<!-- Google fonts -->
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700italic,800,800italic,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
 
 	<!-- for more info on the line below, please check: http://www.w3schools.com/css/css_rwd_viewport.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +57,7 @@
 						 <path d="m47.124,30.667-43.935,0c-0.60105,0-1.0877,0.76152-1.0877,1.6877s0.48669,1.6877,1.0877,1.6877h43.938c0.6037,0,1.0877-0.76152,1.0877-1.6877s-0.48669-1.6877-1.0904-1.6877z" />
 						</svg>
 			
-					<h1 id="logo">NEWSPAPER</h1> 
+					<h1 id="logo">GOOD NEWS</h1> 
 					<span id="service">
 <!--SVG code for USER button-->
 <span id="user">
@@ -173,7 +175,7 @@
 			<p class="lead">Facebook messes with our minds; Facebook's 'emotional contagion' experiment makes users really mad</p>
 			<p>What was going on in your Facebook news feed the week of Jan. 11-18, 2012? Birthday reminders, cat videos, crockpot recipes, baby pictures and invitations to play Bejeweled Blitz, probably, plus lots of current events posts were guaranteed to make you glad or mad. That week, Mitt Romney won New Hampshire's Republican primary, Playboy announced it was leaving Chicago, and Hostess filed for bankruptcy, prompting fears that there would be no more Twinkies. The Patriots knocked the Broncos out of the NFL playoffs, putting an end to Tebowmania. Snowfall in an otherwise mild winter, Derrick Rose was out with a sprained toe, and your crazy cousin was picking fights with anyone who commented on any of it. If you were one of nearly 700,000 randomly selected Facebook users, though, your feed might have contained a little less to "like." Or dislike. For years, Facebook has ignored pleas to add a clickable thumbs-down icon. Maybe this is why.</p>
 		</div><!-- end #paginated-content -->
-
+</div>
 
 <!--
 	<p id="interaction"><a id="GOEXPLORE" href="#explore">You've read 5 articles from us... <br> Time to GO EXPLORE more.</a></p>
@@ -187,7 +189,7 @@
 			<p class="imgnr">1/3</p>
 
 		 </div> <!-- end article img-gallery -->
-</div>
+
 		<!-- <p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p> -->
 
 		<!--<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p> -->
@@ -251,7 +253,7 @@
 	</div>
 </div>
 
-<img class="subscribe" src="images/html-subscribe.png" alt="subscribe">
+
 
 	
 <!-- Begin of the share function -->
@@ -346,7 +348,38 @@
 
 	</div><!-- end #discussion -->
 
-	<p id="footer"><img src="images/footer.png" alt="Footer"></p>
+
+   <div id="footer">
+   	<ul>
+   		<li><img class="subscribe" src="images/html-subscribe.png" alt="subscribe"></li>
+   		<li>Follow us </li> 
+   		<li>
+   			<!--Twitter svg-->
+   			<svg class="footer-svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 194.666 194.666" xml:space="preserve" width="30" height="30" >
+		      		<path d="m64.213 177.752c-0.727 0-1.123-0.017-1.149-0.019-0.543 0.009-1.084 0.013-1.622 0.013-36.503 0-60.885-18.507-61.131-18.697-0.273-0.211-0.381-0.575-0.265-0.9 0.116-0.327 0.454-0.523 0.774-0.532 22.349 0.563 36.568-3.957 44.543-7.857 6.112-2.989 9.597-6.073 11.117-7.63-16.154-2.843-25.243-10.203-30.055-15.963-5.396-6.46-6.711-12.234-6.764-12.477-0.052-0.237 0.006-0.484 0.158-0.673 0.151-0.189 0.381-0.299 0.623-0.299l13.948 0C19.202 106.625 12.455 96.993 9.461 89.688 5.915 81.038 6.705 73.877 6.74 73.577c0.033-0.28 0.212-0.523 0.471-0.638 0.258-0.114 0.56-0.085 0.789 0.08 5.352 3.819 11.593 4.123 14.745 3.98C-4.267 56.541 11.707 24.247 11.874 23.917c0.121-0.238 0.353-0.4 0.618-0.432 0.268-0.032 0.529 0.071 0.703 0.273 39.276 45.915 75.079 42.257 80.458 41.397-1.188-11.787-0.312-27.774 10.119-38.555 6.412-6.626 13.312-8.096 13.603-8.155 27.652-5.936 45.22 7.131 48.013 9.403l23.129-9.36c0.269-0.109 0.575-0.064 0.8 0.117 0.227 0.181 0.337 0.47 0.289 0.756-1.296 7.763-9.71 15.652-14.044 19.263l18.159-3.346c0.348-0.065 0.705 0.113 0.862 0.435 0.158 0.322 0.083 0.71-0.185 0.949L173.36 55.485c0.514 8.233 1.522 26.759-6.82 46.556-17.209 40.838-44.409 59.244-64.195 67.494-18.326 7.641-33.875 8.217-38.132 8.217z"/>
+		      	</svg>
+		      	<!--whatsapp svg-->
+		      	<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 500 500" height="30" width="30" y="0px" x="0px" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+					<path  style="stroke-width:11px" d="m19.89,452.5c-2.486,4.973,0,9.945,2.486,12.431,4.973,2.486,9.945,2.486,14.918,2.486l74.588-27.349c37.294,24.863,82.047,37.294,126.8,37.294,131.77,0,238.68-106.91,238.68-238.68s-106.9-238.68-238.68-238.68c-131.77,0-238.68,106.91-238.68,238.68,0,49.726,14.918,99.451,44.753,139.23z"/>
+					<path  style="stroke-width:11px" d="m285.92,382.89c12.431,2.486,22.377,4.973,34.808,4.973,29.835,0,52.212-12.431,67.13-34.808,7.459-14.918,9.945-27.349,7.459-39.781-4.973-14.918-17.404-22.377-19.89-24.863l-37.294-19.89c-4.973-2.486-9.945-4.973-14.918-4.973-24.863,0-39.781,27.349-39.781,27.349s-2.486,2.486-7.459,2.486h-2.486c-37.294-12.431-64.643-47.239-77.075-64.643l-2.486-2.486c-9.945-7.459-12.431-7.459-2.486-17.404,19.89-17.404,14.918-37.294,9.945-44.753l-24.863-59.671c-2.486-4.973-12.431-12.431-22.377-12.431-12.431,0-27.349,7.459-44.753,24.863-42.267,42.267-9.945,106.91-9.945,106.91,47.239,124.31,181.5,156.64,186.47,159.12z"/>
+				</svg>
+				<!--Facebook svg-->
+				<svg class="footer-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="30" height="30" viewBox="0 0 480 480" >
+				<path style="stroke-width:11px" d="M271.52 154.17v-40.54c0-6.09 0.28-10.8 0.85-14.13 0.57-3.33 1.86-6.61 3.86-9.85 2-3.24 5.24-5.47 9.71-6.71 4.48-1.24 10.42-1.86 17.85-1.86h40.54V0h-64.81c-37.5 0-64.43 8.9-80.8 26.69 -16.37 17.8-24.55 44.01-24.55 78.66v48.82h-48.54v81.09h48.54v235.26h97.36V235.26h64.81l8.57-81.09H271.52z"/>
+				</svg>
+		     </li>
+   		<li>Contact us </li>
+   		<li>Imprint</li>
+     	<li>Made with 
+   			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+				<!-- Created with Inkscape (http://www.inkscape.org/) -->
+				<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewbox="0 0 25 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">			
+				 <path d="M16.152,0.5c-1.505,0-3.001,1.394-4.23,2.242-1.215-0.838-2.62-2.242-4.102-2.242-1.955,0-3.792,0.762-5.172,2.144-1.385,1.385-2.148,3.227-2.148,5.185,0,1.959,0.764,3.801,2.129,5.165l9.356,10.688,9.339-10.668c2.859-2.858,2.859-7.51,0.002-10.369-1.382-1.383-3.22-2.145-5.174-2.145z" style="stroke-width:1px;"/>
+				</svg> in Amsterdam</li>   		
+   	</ul>
+   </div>
+
+	<!--<p id="footer"><img src="images/footer.png" alt="Footer"></p>-->
 
 
 </div><!-- end #content -->
