yin and ranking initial script.js changes

--- a/prototype.html
+++ b/prototype.html
@@ -340,6 +340,7 @@
 					<div class="YIN">
 				   		<img class="yinOn" src="images/yinOn.png" alt="Summary">
 				   		<img class="yin" src="images/yin.png" alt="yin">
+						<img class="ranking" src="images/ranking.png" alt="ranking">
 				   	</div>
 				   <img src="images/authors.png" alt="Authors">
 				   <img src="images/personaltopics.png" alt="PersonalTopics">
