--- a/prototype.html
+++ b/prototype.html
@@ -337,13 +337,17 @@
 				    <img src="images/addpersonalexplore.png" alt="Add">
 
 				<div id="sortable">
+
+					<div class="TitleYin" id="TitleYin">
+							<h3><span> 2016 <span> Year in News</h3>
+					</div>
+
 					<div class="YIN">
-				   		<img class="yinOn" src="images/yinOn.png" alt="Summary">
 				   		<img class="yin" src="images/yin.png" alt="yin">
 						<img class="ranking" src="images/ranking.png" alt="ranking">
 				   	</div>
-				   <img src="images/authors.png" alt="Authors">
-				   <img src="images/personaltopics.png" alt="PersonalTopics">
+				   		<img src="images/authors.png" alt="Authors">
+				   		<img src="images/personaltopics.png" alt="PersonalTopics">
 
 				</div>		
 
