--- a/prototype.html
+++ b/prototype.html
@@ -339,7 +339,7 @@
 				<div id="sortable">
 
 					<div class="TitleYin" id="TitleYin">
-							<h3><span> 2016 <span> Year in News</h3>
+							<h3><span> 2016 </span> Year in News <span><i class="fa fa-caret-left fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x" aria-hidden="true"></i></span></h3>
 					</div>
 
 					<div class="YIN">
