--- a/prototype.html
+++ b/prototype.html
@@ -196,45 +196,45 @@
 
 <!-- <span class="meta"><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span> -->
 
-
+<div id="belowArticle">
 
 	<!--<img class="poll" src="images/poll.png" alt="Poll">-->
-<div class="poll">
-<hr class="lines">
-<h2 class="subheader">POLL</h2>
-	<span>Do you hate Donald Trump?</span></br>
-	<span class="pollOptions">Yes</span>
-	<span class="pollOptions">No</span>
-	<span class="results" id="Yes" >
-		<p id="left">67% Yes</p>
-		<p id="right"> 33% N0 </p>
+<div id="poll">
+	<hr class="lines">
+	<h2 class="subheader">POLL</h2>
+		<span>Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span></br>
+		<span class="pollOptions">No</span>
+		<span class="pollOptions">Yes</span>
+		<span class="results" id="Yes" >
+			<p id="left">67% No</p>
+			<p id="right"> 33% Yes</p>
 		</span>
 	<!--<input type="button" name="answer" value="Yes"></input>
 	<input type="button" name="answer" value="No"></input>-->
-	<input id="submit-button" type="submit" name="submit" value="Submit"></input>
+		<input id="submit-button" type="submit" name="submit" value="Submit"></input>
 </div>
 
 <!--<hr class="lines">
 	<!--<img class="pollresultsArticle" src="images/pollresultsArticle.png" alt="PollResultsArticle">-->
 
-	
-   <!--<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">-->
-
+  <div id="relatedArticles">
+  	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
+  </div>
 
 
 	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
 
 <div id="newsUpdate" >
 	<hr class="lines">
-	<span class="subheader">NEWS UPDATES</span>
-	<p id="newUpdateText">Get the news you want, when you want and where you want.</p>
+	<span class="subheader">SIGN UP to get your Personal News Updates</span>
+	<p id="newUpdateText">GET ONLY THE NEWS YOU WANT. Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
 	<ul class="updateTabs">
 		<li class="selected"><a href="#what">What</a></li>
 		<li><a href="#when">When</a></li>
 		<li><a href="#where">Where</a></li>
 	</ul>
    <div class="tabUpdContent" id="what">
-		<span>Author</span> <span>Social Media</span> <span>Privacy</span> <span>Podcast</span> <span>Copyright</span> <span>Software</span>
+		<span>A.Hern</span> <span>Facebook</span> <span>Privacy</span> <span>Culture</span> <span>Politics</span> <span>Technology</span>
 		<div class="NewsUpdate-check">
 		<!-- SVG Code for the arrow in the News Update box -->
 		<?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -262,6 +262,7 @@
 		<span><i class="fa fa-facebook" aria-hidden="true"></i></span> <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span> <span><i class="fa fa-twitter" aria-hidden="true"></i></span> <span><i class="fa fa-whatsapp" aria-hidden="true"></i></span>
 		<button class="signUpdate">SIGN UP</button>
 	</div>
+  </div>
 </div>
 
 
