added txt in footer

--- a/prototype.html
+++ b/prototype.html
@@ -387,6 +387,8 @@
 		     </li>
    		<li>Contact us </li>
    		<li>Imprint</li>
+   		<li>Terms and Conditions</li>
+   		<li>About</li>
      	<li>Made with 
    			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 				<!-- Created with Inkscape (http://www.inkscape.org/) -->
