--- a/prototype.html
+++ b/prototype.html
@@ -236,14 +236,16 @@
    <div class="tabUpdContent" id="what">
 		<span>A.Hern</span> <span>Facebook</span> <span>Privacy</span> <span>Culture</span> <span>Politics</span> <span>Technology</span>
 		<div class="NewsUpdate-check">
+			
 		<!-- SVG Code for the arrow in the News Update box -->
 		<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<svg   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+					<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 					  <path d="M12.131,0.501,11.918,0.5c-6.184,0-11.303,5.03-11.416,11.212-0.057,3.051,1.08,5.938,3.197,8.135,2.119,2.196,4.965,3.438,8.016,3.492l0.213,0.002h0.002c6.18,0,11.297-5.03,11.414-11.212,0.111-6.3-4.918-11.516-11.213-11.628z" />
 					 <path  d="m5.2351,11.914,11.869,0.0631" />
 					 <path  d="m12.054,6.6104,5.2402,5.3664-5.2887,5.3642"/>
 					</svg>		
 		<!--<i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>-->
+			
         </div>
 	</div>
 	<div class="tabUpdContent" id="when">
@@ -251,15 +253,16 @@
 		<div class="NewsUpdate-check">
 		<!-- SVG Code for the arrow in the News Update box -->
 		<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<svg  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+					<svg id="arrowWhen" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 					  <path d="M12.131,0.501,11.918,0.5c-6.184,0-11.303,5.03-11.416,11.212-0.057,3.051,1.08,5.938,3.197,8.135,2.119,2.196,4.965,3.438,8.016,3.492l0.213,0.002h0.002c6.18,0,11.297-5.03,11.414-11.212,0.111-6.3-4.918-11.516-11.213-11.628z" />
 					 <path  d="m5.2351,11.914,11.869,0.0631" />
 					 <path  d="m12.054,6.6104,5.2402,5.3664-5.2887,5.3642"/>
 					</svg>
+		
          </div>
 	</div>
 	<div class="tabUpdContent" id="where">
-		<span><i class="fa fa-facebook" aria-hidden="true"></i></span> <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span> <span><i class="fa fa-twitter" aria-hidden="true"></i></span> <span><i class="fa fa-whatsapp" aria-hidden="true"></i></span>
+		<span><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></span> <span><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></span> <span><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></span> <span><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></span>
 		<button class="signUpdate">SIGN UP</button>
 	</div>
   </div>
