--- a/prototype.html
+++ b/prototype.html
@@ -343,7 +343,7 @@
 				<div id="sortable">
 
 					<div class="TitleYin" id="TitleYin">
-							<h3><span id='year'> 2016 </span> Year in News <span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i><!--<i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>--></span></h3>
+							<h3><span id='year'> 2016 </span><span id="yearInNews"> Year in News </span><span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i><!--<i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>--></span></h3>
 					</div>
 
 					<div class="YIN">
