js YiN, footer and discussion css

--- a/prototype.html
+++ b/prototype.html
@@ -214,17 +214,12 @@
 		<input id="submit-button" type="submit" name="submit" value="Submit"></input>
 </div>
 
-<!--<hr class="lines">
-	<!--<img class="pollresultsArticle" src="images/pollresultsArticle.png" alt="PollResultsArticle">-->
-
   <div id="relatedArticles">
   	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
   </div>
 
 
-	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
-
-<div id="newsUpdate" >
+<div id="newsUpdate">
 	<hr class="lines">
 	<span class="subheader">SIGN UP to get your Personal News Updates</span>
 	<p id="newUpdateText">GET ONLY THE NEWS YOU WANT. Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
@@ -346,9 +341,8 @@
 							<h3><span id='year'> 2016 </span><span id="yearInNews"> Year in News </span><span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i><!--<i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>--></span></h3>
 					</div>
 
-					<div class="YIN">
+					<div>
 				   		<img class="yin" src="images/yin.png" alt="yin">
-						<img class="ranking" src="images/ranking.png" alt="ranking">
 				   	</div>
 				   		<img src="images/authors.png" alt="Authors">
 				   		<img src="images/personaltopics.png" alt="PersonalTopics">
