--- a/prototype.html
+++ b/prototype.html
@@ -322,8 +322,19 @@
 			<img src="images/searchpublicexplore.png" alt="SearchPublicExplore" />
 			<img src="images/briefingplay.png" alt="BriefingPlay" />
 			<img src="images/topnews.png" alt="TopNews" />
+
+			  <div id="dutchTopics">
+				<hr class="lines">
+				<h2 class="subheaderExDutch">EXPLORE DUTCH TOPICS</h2>
 			<img src="images/dutchtopics.png" alt="DutchTopics" />
+			  </div>
+
+			  <div id="worldTopics">
+				<hr class="lines">
+				<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS</h2>
 			<img src="images/worldtopics.png" alt="WorldTopics" />
+			  </div>
+
 			<img src="images/topvideos.png" alt="TopVideos" />
 			<img src="images/gallery.png" alt="Gallery" />
 		</div>
