changed the section heading styling

--- a/prototype.html
+++ b/prototype.html
@@ -139,11 +139,12 @@
 <div class="content">
 
 <div class="tabContent" id="article">
-	<div id="heading">
-		<h id="headingArticle">ARTICLE</h>
+	<div id="heading-div-article">
+		<h2 id="headingArticle">ARTICLE</h2>
+		<hr class="lines">
    	</div>
 
-
+ <div class="title-header">
 	<h2 id="title">Where's the 'dislike' button?</h2>
 	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 
@@ -169,6 +170,7 @@
 					<path d="m14.689,0.4849-13.768,0c-0.227,0-0.41,0.184-0.41,0.41v22.023c0,0.166,0.1,0.314,0.252,0.377,0.156,0.069,0.33,0.029,0.449-0.088l1.371-1.372c0.004-0.001,0.004-0.003,0.006-0.005l5.215-5.213,6.594,6.59c0.078,0.078,0.182,0.12,0.291,0.12,0.051,0,0.104-0.01,0.156-0.032,0.152-0.062,0.252-0.211,0.252-0.377v-22.023c0-0.226-0.183-0.41-0.408-0.41z" />
 					</svg>
 			</span>	
+	</div> <!-- End .title-header-->
 
 <div id="mainArticlePage">
 		<div id="paginated-content">			
@@ -305,15 +307,15 @@
 
 	<div class="tabContent"  id="explore">
 
+<div id="heading-div-explore">	
+	<h2 id="headingExplore">EXPLORE</h2> 
+	<hr class="lines">
+</div>
 	
-	<h id="headingExplore">EXPLORE</h> 
-	
-
 		<!-- tab -->
 		<ul class="intTab">
-
-			<li class="selected"><a href="#tab1">Public</a></li>
-			<li><a href="#tab2">Personal</a></li>
+			<li class="selected" id="public-explore"><a href="#tab1">Public</a></li>
+			<li id="personal-explore"><a href="#tab2">Personal</a></li>
 		</ul>
 		<!-- end tab -->
 
@@ -352,13 +354,22 @@
 				</div>		
 
 		</div> <!-- end Personal Explore tab2 --> 
-				<!-- end explore content -->
+	 </div> 		<!-- end explore content -->
+
 	</div><!-- end #explore -->
 
 	<!-- discussion -->
 	<div  class="tabContent" id="discussion">
 
+	<div id="heading-div-discussion">
+		
 		<h id="headingDiscussion">DISCUSSION</h>
+		<p>Where's the 'dislike' button?</p>		
+	<hr class="lines">	
+       
+
+	</div>
+
 
 		<img src="images/html-comments-01.png" alt="Discussion">
 
