dutch world topic changes

--- a/prototype.html
+++ b/prototype.html
@@ -326,13 +326,13 @@
 			  <div id="dutchTopics">
 				<hr class="lines">
 				<h2 class="subheaderExDutch">EXPLORE DUTCH TOPICS</h2>
-			<img src="images/dutchtopics.png" alt="DutchTopics" />
+			<img class='dutchtopics' src="images/dutchtopics.png" alt="DutchTopics" />
 			  </div>
 
 			  <div id="worldTopics">
 				<hr class="lines">
 				<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS</h2>
-			<img src="images/worldtopics.png" alt="WorldTopics" />
+			<img class= 'worldtopics' src="images/worldtopics.png" alt="WorldTopics" />
 			  </div>
 
 			<img src="images/topvideos.png" alt="TopVideos" />
