--- a/prototype.html
+++ b/prototype.html
@@ -204,7 +204,7 @@
 <div id="poll">
 	<hr class="lines">
 	<h2 class="subheader">POLL</h2>
-		<span>Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span></br>
+		<span id='pollText'>Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span></br>
 		<span class="pollOptions">No</span>
 		<span class="pollOptions">Yes</span>
 		<span class="results" id="Yes" >
@@ -223,8 +223,8 @@
 
 <div id="newsUpdate">
 	<hr class="lines">
-	<span class="subheader">SIGN UP to get your Personal News Updates</span>
-	<p id="newUpdateText">GET ONLY THE NEWS YOU WANT. Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
+	<span class="subheader">Get Personalized News Updates</span>
+	<p id="newUpdateText">Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
 	<ul class="updateTabs">
 		<li class="selected"><a href="#what">What</a></li>
 		<li><a href="#when">When</a></li>
@@ -326,13 +326,13 @@
 			<img src="images/topnews.png" alt="TopNews" />
 
 			  <div id="dutchTopics">
-				<hr class="lines">
+				<hr class="linesEx">
 				<h2 class="subheaderExDutch">EXPLORE DUTCH TOPICS</h2>
 			<img class='dutchtopics' src="images/dutchtopics.png" alt="DutchTopics" />
 			  </div>
 
 			  <div id="worldTopics">
-				<hr class="lines">
+				<hr class="linesEx">
 				<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS</h2>
 			<img class= 'worldtopics' src="images/worldtopics.png" alt="WorldTopics" />
 			  </div>
