adjusted styling poll

--- a/prototype.html
+++ b/prototype.html
@@ -201,12 +201,12 @@
 
 <!-- <span class="meta"><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span> -->
 
-
+<div id="belowarticle">
 
 <div id="poll">
 	<hr class="lines">
 	<h2 class="subheader">POLL</h2>
-		<span>Do you find Facebook's privacy settings clear?</span>
+		<span id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span>
 		<span class="pollOptions">No</span>
 		<span class="pollOptions">Yes</span>
 		<span class="results" id="Yes" >
@@ -301,6 +301,7 @@
 		    </ul>
 		  </div>
 		</div>
+	</div><!-- end #belowarticle ->
 
 </div><!-- end #article -->
 
