--- a/prototype.html
+++ b/prototype.html
@@ -218,9 +218,10 @@
 		<input id="submit-button" type="submit" name="submit" value="Submit"></input>
 </div>
 
-  <!--<div id="relatedArticles">
+  <div id="relatedArticles">
+  	<hr id="related-lines">
   	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
-  </div>-->
+  </div>
 
 
 <div id="newsUpdate">
