added icons explore toggle

--- a/prototype.html
+++ b/prototype.html
@@ -304,7 +304,7 @@
 		</div>
 	</div><!-- end #belowarticle ->
 
-</div><!-- end #article -->
+</div>  end #article -->
 
 	<!-- explore -->
 
@@ -331,13 +331,13 @@
 
 			  <div id="dutchTopics">
 				<hr class="linesEx">
-				<h2 class="subheaderExDutch">EXPLORE DUTCH TOPICS</h2>
+				<h2 class="subheaderExDutch">EXPLORE DUTCH TOPICS <span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i><!--<i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>--></span></h2>
 			<img class='dutchtopics' src="images/dutchtopics.png" alt="DutchTopics" />
 			  </div>
 
 			  <div id="worldTopics">
 				<hr class="linesEx">
-				<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS</h2>
+				<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS<span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i><!--<i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>--></span></h2>
 			<img class= 'worldtopics' src="images/worldtopics.png" alt="WorldTopics" />
 			  </div>
 
