--- a/prototype.html
+++ b/prototype.html
@@ -51,13 +51,13 @@
 <!--hamburger svg-->
 				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 						<!-- Created with Inkscape (http://www.inkscape.org/) -->
-						<svg id="fill-svg" class="main-nav-svg" height="30" width="30"  viewbox="0 0 60 60" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">	
+						<svg id="fill-svg" class="main-nav-svg" height="30" width="30"  viewbox="0 0 60 60" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 						 <path d="m47.568,1.6543-44.826,0c-0.60105,0-1.0877,0.76152-1.0877,1.6836,0,0.93441,0.48669,1.6877,1.0877,1.6877h44.826c0.60104,0,1.0904-0.75741,1.0904-1.6877-0.0027-0.92206-0.48935-1.6836-1.0904-1.6836z" />
 						 <path d="M47.568,16.159h-44.826c-0.60105,0-1.0877,0.76152-1.0877,1.6918,0,0.92618,0.48669,1.6836,1.0877,1.6836h44.826c0.60104,0,1.0904-0.76152,1.0904-1.6836-0.0027-0.93441-0.48935-1.6918-1.0904-1.6918z" />
 						 <path d="m47.124,30.667-43.935,0c-0.60105,0-1.0877,0.76152-1.0877,1.6877s0.48669,1.6877,1.0877,1.6877h43.938c0.6037,0,1.0877-0.76152,1.0877-1.6877s-0.48669-1.6877-1.0904-1.6877z" />
 						</svg>
-			
-					<h1 id="logo">GOOD NEWS</h1> 
+
+					<h1 id="logo">GOOD NEWS</h1>
 					<span id="service">
 <!--SVG code for USER button-->
 <span id="user">
@@ -96,23 +96,23 @@
 						 <path class="svg-element" d="m39.351,21.341c-0.60981,0-1.1115,0.49594-1.1115,1.1077,0,0.61559,0.50173,1.1135,1.1115,1.1135,0.60979,0,1.1077-0.49787,1.1077-1.1135,0-0.61173-0.49788-1.1077-1.1077-1.1077z" />
 						 <path  class="svg-element" d="m7.4199,21.341c-0.6098,0-1.1077,0.49594-1.1077,1.1077,0,0.61559,0.49788,1.1135,1.1077,1.1135,0.6098,0,1.1077-0.49787,1.1077-1.1135,0-0.61173-0.49787-1.1077-1.1077-1.1077z" />
 						 <path  class="svg-element" d="m22.597,4.1492c-0.6098,0-1.1115,0.49595-1.1115,1.1077,0,0.61559,0.50173,1.1135,1.1115,1.1135,0.6098,0,1.1077-0.49788,1.1077-1.1135,0-0.61172-0.49788-1.1077-1.1077-1.1077z" />
-				 	</svg>						 								 
+				 	</svg>
 					</a>
 				 </li>
 				<li class="selected">
 					<a href="#article">
-	
+
 	<!-- this is the code for the svg of the article section-->
 				 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 
-				<svg class="tab-icon"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 26 26"  >						
+				<svg class="tab-icon"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 26 26"  >
 					  <path style="stroke-width:1" d="m16.839,6.149,0,0l-5.531-5.529c-0.081-0.081-0.185-0.12-0.29-0.12h-10.107c-0.227,0-0.411,0.184-0.411,0.409v22.119c0,0.227,0.184,0.411,0.411,0.411h15.639c0.227,0,0.41-0.184,0.41-0.411v-16.589c0-0.112-0.046-0.214-0.121-0.29z" />
 						 <path  style="stroke-width:1" d="m10.959,0.54083,0,5.8715,5.9346-0.00001" />
 						 <path style="stroke-width:1" d="m3.8245,10.958c10.228,0.0631,10.228,0,10.228,0" />
 						 <path style="stroke-width:1" d="m3.7591,13.689c10.228,0.0631,10.228,0,10.228,0" />
 						 <path style="stroke-width:1" d="m3.7809,16.42c10.228,0.0631,10.228,0,10.228,0" />
 						 <path  style="stroke-width:1"d="m3.8027,19.152c10.228,0.0631,10.228,0,10.228,0"/>
-						</svg>				
+						</svg>
 					</a>
 				</li>
 			 	<li id="discussionTour">
@@ -148,10 +148,10 @@
 	<h2 id="title">Where's the 'dislike' button?</h2>
 	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 
-	    <!--  <span id="User">		
+	    <!--  <span id="User">
 				<img src="images/login.png" alt="logIn">
 			</span>-->
-	
+
 <!--SVG for the audio button ' listen to the article'-->
 		<span class= "options" id="listen" >
 		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -169,11 +169,11 @@
 					<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" viewbox="0 0 40 40">
 					<path d="m14.689,0.4849-13.768,0c-0.227,0-0.41,0.184-0.41,0.41v22.023c0,0.166,0.1,0.314,0.252,0.377,0.156,0.069,0.33,0.029,0.449-0.088l1.371-1.372c0.004-0.001,0.004-0.003,0.006-0.005l5.215-5.213,6.594,6.59c0.078,0.078,0.182,0.12,0.291,0.12,0.051,0,0.104-0.01,0.156-0.032,0.152-0.062,0.252-0.211,0.252-0.377v-22.023c0-0.226-0.183-0.41-0.408-0.41z" />
 					</svg>
-			</span>	
+			</span>
 	</div> <!-- End .title-header-->
 
 <div id="mainArticlePage">
-		<div id="paginated-content">			
+		<div id="paginated-content">
 			<p class="lead">Facebook messes with our minds; Facebook's 'emotional contagion' experiment makes users really mad</p>
 			<p>What was going on in your Facebook news feed the week of Jan. 11-18, 2012? Birthday reminders, cat videos, crockpot recipes, baby pictures and invitations to play Bejeweled Blitz, probably, plus lots of current events posts were guaranteed to make you glad or mad. That week, Mitt Romney won New Hampshire's Republican primary, Playboy announced it was leaving Chicago, and Hostess filed for bankruptcy, prompting fears that there would be no more Twinkies. The Patriots knocked the Broncos out of the NFL playoffs, putting an end to Tebowmania. Snowfall in an otherwise mild winter, Derrick Rose was out with a sprained toe, and your crazy cousin was picking fights with anyone who commented on any of it. If you were one of nearly 700,000 randomly selected Facebook users, though, your feed might have contained a little less to "like." Or dislike. For years, Facebook has ignored pleas to add a clickable thumbs-down icon. Maybe this is why.That week, Facebook conducted a little experiment. Its robots trolled the news feeds of the users in that sample, tinkered with them to reduce the number of positive or negative posts, then studied the users' own entries for signs of "emotional contagion." They wanted to see if reducing the positives (or negatives) in your news feed made you feel less positive (or negative).</p>
 		</div><!-- end #paginated-content -->
@@ -182,7 +182,7 @@
 <!--
 	<p id="interaction"><a id="GOEXPLORE" href="#explore">You've read 5 articles from us... <br> Time to GO EXPLORE more.</a></p>
 -->
-	
+
 		 <div id="img-gallery">
 			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
 			<img class="article-img" src="images/article-01.jpg" />
@@ -233,16 +233,16 @@
    <div class="tabUpdContent" id="what">
 		<span>A.Hern</span> <span>Facebook</span> <span>Privacy</span> <span>Culture</span> <span>Politics</span> <span>Technology</span>
 		<div class="NewsUpdate-check">
-			
+
 		<!-- SVG Code for the arrow in the News Update box -->
 		<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 					<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 					  <path d="M12.131,0.501,11.918,0.5c-6.184,0-11.303,5.03-11.416,11.212-0.057,3.051,1.08,5.938,3.197,8.135,2.119,2.196,4.965,3.438,8.016,3.492l0.213,0.002h0.002c6.18,0,11.297-5.03,11.414-11.212,0.111-6.3-4.918-11.516-11.213-11.628z" />
 					 <path  d="m5.2351,11.914,11.869,0.0631" />
 					 <path  d="m12.054,6.6104,5.2402,5.3664-5.2887,5.3642"/>
-					</svg>		
+					</svg>
 		<!--<i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>-->
-			
+
         </div>
 	</div>
 	<div class="tabUpdContent" id="when">
@@ -255,7 +255,7 @@
 					 <path  d="m5.2351,11.914,11.869,0.0631" />
 					 <path  d="m12.054,6.6104,5.2402,5.3664-5.2887,5.3642"/>
 					</svg>
-		
+
          </div>
 	</div>
 	<div class="tabUpdContent" id="where">
@@ -267,7 +267,7 @@
 
 
 
-	
+
 <!-- Begin of the share function -->
 
 		<div id="share-content">
@@ -306,11 +306,11 @@
 
 	<div class="tabContent"  id="explore">
 
-<div id="heading-div-explore">	
-	<h2 id="headingExplore">EXPLORE</h2> 
+<div id="heading-div-explore">
+	<h2 id="headingExplore">EXPLORE</h2>
 	<hr class="lines">
 </div>
-	
+
 		<!-- tab -->
 		<ul class="intTab">
 			<li class="selected" id="public-explore"><a href="#tab1">Public</a></li>
@@ -320,7 +320,7 @@
 
 
 		<!-- explore content -->
-		<div class="tabIntContent" id="tab1">
+		<div class="tabIntContent" id="tab1" style="display: block;">
 			<img src="images/searchpublicexplore.png" alt="SearchPublicExplore" />
 			<img src="images/briefingplay.png" alt="BriefingPlay" />
 			<img src="images/topnews.png" alt="TopNews" />
@@ -340,7 +340,7 @@
 			<img src="images/topvideos.png" alt="TopVideos" />
 			<img src="images/gallery.png" alt="Gallery" />
 		</div>
-				
+
 		<div class="tabIntContent" id="tab2">
 			<div id="logIn">
 				<img src="images/login.png" alt="logIn">
@@ -360,9 +360,9 @@
 				   		<img src="images/authors.png" alt="Authors">
 				   		<img src="images/personaltopics.png" alt="PersonalTopics">
 
-				</div>		
+				</div>
 
-		</div> <!-- end Personal Explore tab2 --> 
+		</div> <!-- end Personal Explore tab2 -->
 	 </div> 		<!-- end explore content -->
 
 	</div><!-- end #explore -->
@@ -371,11 +371,11 @@
 	<div  class="tabContent" id="discussion">
 
 	<div id="heading-div-discussion">
-		
+
 		<h id="headingDiscussion">DISCUSSION</h>
-		<p>Where's the 'dislike' button?</p>		
-	<hr class="lines">	
-       
+		<p>Where's the 'dislike' button?</p>
+	<hr class="lines">
+
 
 	</div>
 
@@ -388,7 +388,7 @@
    <div id="footer">
    	<ul>
    		<li><img class="subscribe" src="images/html-subscribe.png" alt="subscribe"></li>
-   		<li>Follow us </li> 
+   		<li>Follow us </li>
    		<li>
    			<!--Twitter svg-->
    			<svg class="footer-svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 194.666 194.666" xml:space="preserve" width="30" height="30" >
@@ -408,12 +408,12 @@
    		<li>Imprint</li>
    		<li>Terms and Conditions</li>
    		<li>About</li>
-     	<li>Made with 
+     	<li>Made with
    			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 				<!-- Created with Inkscape (http://www.inkscape.org/) -->
-				<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewbox="0 0 25 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">			
+				<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewbox="0 0 25 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 				 <path d="M16.152,0.5c-1.505,0-3.001,1.394-4.23,2.242-1.215-0.838-2.62-2.242-4.102-2.242-1.955,0-3.792,0.762-5.172,2.144-1.385,1.385-2.148,3.227-2.148,5.185,0,1.959,0.764,3.801,2.129,5.165l9.356,10.688,9.339-10.668c2.859-2.858,2.859-7.51,0.002-10.369-1.382-1.383-3.22-2.145-5.174-2.145z" style="stroke-width:1px;"/>
-				</svg> in Amsterdam</li>   		
+				</svg> in Amsterdam</li>
    	</ul>
    </div>
 
